Projeto Final - Análise de Dados

--- a/PROJETO_2_Analisando_a_Violência_no_Rio_de_Janeirob.ipynb
+++ b/PROJETO_2_Analisando_a_Violência_no_Rio_de_Janeirob.ipynb
@@ -59,7 +59,7 @@
         "colab_type": "text"
       },
       "source": [
-        "### Importando os dados\n"
+        "### Importando os dados e bibliotecas\n"
       ]
     },
     {
@@ -152,6 +152,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "9JeQP7hw235c",
+        "colab_type": "text"
+      },
+      "source": [
+        "### Tamanho do *Dataframe*"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "K85x7Xg1yIUr",
@@ -163,12 +173,13 @@
         }
       },
       "source": [
-        "# Agora que já sabemos o que cada variável representa no dataset, vamos analisar as características do dataframe gerado no início do projeto. (df)\n",
+        "# Agora que já sabemos o que cada variável representa no dataset, vamos analisar\n",
+        "# as características do dataframe gerado no início do projeto. (df)\n",
         "\n",
         "# A primeira característica que vamos analisar é o tamanho do dataframe (shape)\n",
         "df.shape"
       ],
-      "execution_count": 2,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -195,6 +206,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "DkQVVAPd3JTC",
+        "colab_type": "text"
+      },
+      "source": [
+        "### Descrição das variáveis "
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "3m5rskU2y9nd",
@@ -209,7 +230,7 @@
         "# As colunas do dataframe são as variáveis analisadas acima, com seus respectivos nomes:\n",
         "df.columns"
       ],
-      "execution_count": 3,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -252,6 +273,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "pF4XyJN_3akY",
+        "colab_type": "text"
+      },
+      "source": [
+        "### Tipos de dados"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "Z-yJqNSu0PeZ",
@@ -266,7 +297,7 @@
         "# Os tipos das variáveis são: inteiro (int) e real (float)\n",
         "df.dtypes"
       ],
-      "execution_count": 4,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -349,6 +380,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "wyv_LYiW3ny1",
+        "colab_type": "text"
+      },
+      "source": [
+        "### Visualização do *Dataframe*"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "vXEADnrv3WRx",
@@ -363,7 +404,7 @@
         "# visualizando as 5 primeiras linhas do dataframe:\n",
         "df.head()"
       ],
-      "execution_count": 5,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -764,6 +805,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "KpOsDxQm3-Vf",
+        "colab_type": "text"
+      },
+      "source": [
+        "### Análises dos Valores Ausentes"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "dl-kaz5SEnNg",
@@ -778,7 +829,7 @@
         "# Para identificar a porcentagem de valores ausentes de cada coluna: Na ordem decrescente\n",
         "(df.isnull().sum()/df.shape[0]).sort_values(ascending = False)"
       ],
-      "execution_count": 6,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -855,17 +906,17 @@
       "metadata": {
         "id": "Uqu_ayCJRcUE",
         "colab_type": "code",
+        "outputId": "a6753aeb-d81e-49b4-fd82-21e3ac03cb4a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 221
-        },
-        "outputId": "a6753aeb-d81e-49b4-fd82-21e3ac03cb4a"
+        }
       },
       "source": [
         "# análise dos valores nulos em crimes de roubo de bicicleta\n",
         "df.roubo_bicicleta.isnull().tail(72)"
       ],
-      "execution_count": 34,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -907,17 +958,17 @@
       "metadata": {
         "id": "eOlG1WlDfbtG",
         "colab_type": "code",
+        "outputId": "773a13c9-e88e-471c-d204-252acb639a9d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 986
-        },
-        "outputId": "773a13c9-e88e-471c-d204-252acb639a9d"
+        }
       },
       "source": [
         "#Análise de valores nulos em 2017\n",
         "df.query(\"vano == 2017\").isnull().sum()"
       ],
-      "execution_count": 37,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1040,7 +1091,7 @@
         "# análise estatística do dataframe clean\n",
         "df_clean.describe()"
       ],
-      "execution_count": 40,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1634,7 +1685,7 @@
       "source": [
         "df_clean.mean().sort_values(ascending = False)"
       ],
-      "execution_count": 41,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1734,7 +1785,7 @@
         "print(media_furtos)\n",
         "media_furtos.plot.bar(figsize=(4,2))"
       ],
-      "execution_count": 42,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1810,7 +1861,7 @@
         "print(media_roubos)\n",
         "media_roubos.plot.bar(figsize=(4,2))"
       ],
-      "execution_count": 43,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1886,7 +1937,7 @@
         "print(media_ameaca)\n",
         "media_ameaca.plot.bar(figsize=(4,2))"
       ],
-      "execution_count": 44,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1962,7 +2013,7 @@
         "print(media_lesao_corp_dolosa)\n",
         "media_lesao_corp_dolosa.plot.bar(figsize=(4,2))"
       ],
-      "execution_count": 45,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -2026,11 +2077,11 @@
       "metadata": {
         "id": "QYLi0Bb_0l7S",
         "colab_type": "code",
+        "outputId": "f9d5861b-ef7d-4fe8-eb7d-1903f4c007f4",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 428
-        },
-        "outputId": "f9d5861b-ef7d-4fe8-eb7d-1903f4c007f4"
+        }
       },
       "source": [
         "# Média de Total de Lesão Corporal Culposa (1991 a 2019) separadas por mês: (mes 1 = janeiro; mes 12 = dezembro) \n",
@@ -2038,7 +2089,7 @@
         "print(media_lesao_corp_culposa)\n",
         "media_lesao_corp_culposa.plot.bar(figsize=(4,2))"
       ],
-      "execution_count": 46,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
